--- a/Klinik.Web/Views/Loket/Index.cshtml
+++ b/Klinik.Web/Views/Loket/Index.cshtml
@@ -125,6 +125,7 @@
                             @Html.TextBoxFor(x => x.PaymentNumber, new { @class = "form-control", @id = "tbNomor", @style = "display: none;" })
                         </div>
                     </div>
+                </div>
             </section>
         </form>
     </div>
