--- a/Klinik.Web/Views/MappingMaster/ClinicPoliList.cshtml
+++ b/Klinik.Web/Views/MappingMaster/ClinicPoliList.cshtml
@@ -1,25 +1,42 @@
 ﻿@model Klinik.Entities.MappingMaster.ClinicPoliModel
 
 @{
-    ViewBag.Title = "ClinicPoliList";
+    ViewBag.Title = "RolePrivilegeList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<style>
+    table.dataTable.select tbody tr,
+    table.dataTable thead th:first-child {
+        cursor: pointer;
+    }
+</style>
+
+<button id="btnSave" class="btn btn-primary"><i class="fa fa-save"></i> @Klinik.Resources.UIMessages.Save </button>
+
+<br /><br />
 
 <section class="panel">
     <header class="panel-heading">
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
         </div>
-        <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.PoliList
-            <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
-        </h5>
+        <h5 class="panel-title">@Klinik.Resources.UIMessages.Poli</h5>
     </header>
     <div class="panel-body">
+        <div class="form-group">
+            <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Clinic</label>
+            <div class="col-md-4">
+                @Html.TextBoxFor(x => x.ClinicName, new { @class = "form-control", @disabled = "Disabled" })
+                @Html.HiddenFor(x => x.ClinicID, new { @Id = "hdClinicId" })
+            </div>
+        </div>
+
         <div style="width:100%; margin:0 auto">
-            <table id="tbPoli" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+            <table id="tbClinicPoli" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
+                        <th><input name="select_all" value="1" type="checkbox"></th>
                         <th>@Klinik.Resources.UIMessages.ID</th>
                         <th>@Klinik.Resources.UIMessages.Code</th>
                         <th>@Klinik.Resources.UIMessages.Name</th>
@@ -55,7 +72,7 @@
         }
 
 
-        var table = $('#tbPoli').DataTable({
+        var table = $('#tbClinicPoli').DataTable({
             "autoWidth": false,
             "processing": true,
             "serverSide": true,
@@ -63,7 +80,7 @@
             "orderMulti": false,
             "pageLength": 10,
             'ajax': {
-                "url": "/MappingMaster/GetClinicPoliData?clinicid=" + _idClinic,
+                "url": "/MappingMaster/GetClinicPoliData?clinicid="+_idClinic,
                 "type": "POST",
                 "datatype": "json"
             },
@@ -83,26 +100,26 @@
                     "searchable": true,
                     "orderable": true,
                     "visible": false,
-                    "data": "PrivilegeID"
+                    "data": "PoliID"
                 },
                 {
                     "targets": 2,
                     "searchable": false,
                     "orderable": false,
-                    "data": "PrivileveName"
+                    "data": "Code"
                 },
                 {
                     "targets": 3,
                     "searchable": false,
                     "orderable": false,
-                    "data": "PrivilegeDesc"
+                    "data": "ClinicName"
                 }],
 
 
             'order': [[1, 'desc']],
             'rowCallback': function (row, data, dataIndex) {
                 // Get row ID
-                var rowId = data.PrivilegeID;
+                var rowId = data.PoliID;
 
                 //var cek = $.inArray(rowId, rows_selected);
                 //var cek1 = data.Id;
@@ -115,10 +132,10 @@
         });
 
 
-        $('#tbRolePriv tbody').on('click', 'input[type="checkbox"]', function (e) {
+        $('#tbClinicPoli tbody').on('click', 'input[type="checkbox"]', function (e) {
             var $row = $(this).closest('tr');
             var data = table.row($row).data();
-            var rowId = data.PrivilegeID;
+            var rowId = data.PoliID;
             var index = $.inArray(rowId, rows_selected);
             if (this.checked && index === -1) {
                 rows_selected.push(rowId);
@@ -136,16 +153,16 @@
         });
 
 
-        $('#tbRolePriv').on('click', 'tbody td, thead th:first-child', function (e) {
+        $('#tbClinicPoli').on('click', 'tbody td, thead th:first-child', function (e) {
             $(this).parent().find('input[type="checkbox"]').trigger('click');
         });
 
 
         $('thead input[name="select_all"]', table.table().container()).on('click', function (e) {
             if (this.checked) {
-                $('#tbRolePriv tbody input[type="checkbox"]:not(:checked)').trigger('click');
+                $('#tbClinicPoli tbody input[type="checkbox"]:not(:checked)').trigger('click');
             } else {
-                $('#tbRolePriv tbody input[type="checkbox"]:checked').trigger('click');
+                $('#tbClinicPoli tbody input[type="checkbox"]:checked').trigger('click');
             }
 
             // Prevent click event from propagating to parent
@@ -165,9 +182,9 @@
                 }
                 else {
                     var form_data = new FormData();
-                    form_data.append("RoleId", $('#hdRoleId').val());
+                    form_data.append("ClinicID", $('#hdClinicId').val());
 
-                    form_data.append("Privileges", JSON.stringify(rows_selected));
+                    form_data.append("Poli", JSON.stringify(rows_selected));
 
                     $.ajax({
                         type: 'POST',
@@ -243,4 +260,3 @@
 
     </script>
 }
-
