--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -129,7 +129,7 @@
                                                 {
                                                     <li>
                                                         <a href="@Url.Action(item.Action,item.Controller)">
-                                                            <i class="@item.icon" aria-hidden="true"></i>
+                                                            <i class="@item.Icon" aria-hidden="true"></i>
                                                             <span> @item.Description </span>
                                                         </a>
                                                     </li>
@@ -138,7 +138,7 @@
                                                 {
                                                     <li class="nav-parent">
                                                         <a>
-                                                            <i class="@item.icon" aria-hidden="true"></i>
+                                                            <i class="@item.Icon" aria-hidden="true"></i>
                                                             <span> @item.Description </span>
                                                         </a>
                                                         <ul class="nav nav-children">
