--- a/Klinik.Web/Views/Lab/ListQueueLaboratorium.cshtml
+++ b/Klinik.Web/Views/Lab/ListQueueLaboratorium.cshtml
@@ -10,23 +10,12 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.PreExamineQueue
+            @Klinik.Resources.UIMessages.LaboratoriumQueue
         </h5>
     </header>
 
     <div class="panel-body">
-        <div class="form-group">
-            <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.PoliTo</label>
-            <div class="col-md-4">
-                @Html.DropDownListFor(x => x.PoliToID, (IEnumerable<SelectListItem>)ViewBag.PoliSelection, new { @class = "form-control", @id = "ddlPoliTo" })
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.AlreadyPreExamine</label>
-            <div class="col-md-4">
-                @Html.DropDownListFor(x => x.strIsPreExamine, (IEnumerable<SelectListItem>)ViewBag.AlreadyPreExamine, new { @class = "form-control", @id = "ddlPreExamine" })
-            </div>
-        </div>
+        
         <div style="width:100%; margin:0 auto">
             <table id="tbQueuePoli" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
@@ -39,9 +28,9 @@
                         <th>@Klinik.Resources.UIMessages.RegistrationType</th>
                         <th>@Klinik.Resources.UIMessages.PoliFrom</th>
                         <th>@Klinik.Resources.UIMessages.PoliTo</th>
-                        <th>@Klinik.Resources.UIMessages.AlreadyPreExamine</th>
+                       
                         <th></th>
-                        <th></th>
+                        
                     </tr>
                 </thead>
             </table>
@@ -53,14 +42,6 @@
     <script type="text/javascript">
         var table;
     $(document).ready(function () {
-
-        $("#ddlPoliTo").change(function () {
-            BindTable();
-        });
-
-        $("#ddlPreExamine").change(function () {
-            BindTable();
-        });
 
         BindTable();
 
@@ -77,7 +58,7 @@
         "showMethod": "fadeIn"
     };
 
- 
+
 
         function BindTable() {
             var _selected = $('#ddlPoliTo').val();
@@ -87,11 +68,11 @@
             "processing": true,
             "serverSide": true,
             "filter": true,
-            "destroy":true,
+            
             "orderMulti": false,
             "pageLength": 10,
             "ajax": {
-                "url": "/PreExamine/GetListQueue?poli="+_selected+"&preexamine="+_isAlreadyPreExamine,
+                "url": "/Lab/GetListQueue",
                 "type": "POST",
                 "datatype": "json"
             },
@@ -140,17 +121,8 @@
                         "targets": [8],
                         "searchable": false,
                         "orderable": false
-                    },
-                    {
-                        "targets": [9],
-                        "searchable": false,
-                        "orderable": false
-                    },
-                    {
-                        "targets": [10],
-                        "searchable": false,
-                        "orderable": false
                     }
+                   
                 ],
             "columns": [
                 { "data": "Id", "name": "Id", "autoWidth": false },
@@ -161,24 +133,15 @@
                 { "data": "TypeStr", "name": "TypeStr", "autoWidth": true },
                 { "data": "PoliFromName", "name": "PoliFromName", "autoWidth": true },
                 { "data": "PoliToName", "name": "PoliToName", "autoWidth": true },
-                { "data": "strIsPreExamine", "name": "strIsPreExamine", "autoWidth": true },
+                
 
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-success" href="/PreExamine/CreateOrEditPreExamine?id=' + full.Id + '">@Klinik.Resources.UIMessages.Process</a>'; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-success" href="/Lab/CreateItemLab?id=' + full.Id + '">@Klinik.Resources.UIMessages.Process</a>'; }
                 },
 
-                {
-                    "render": function (data, type, full, meta) {
-                        if (full.strIsPreExamine == 'Yes') {
-                            return ' <a class="btn btn-info" href="/PreExamine/CreateOrEditPreExamine?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>';
-                        }
-                        else {
-                            return ''
-                        }
-                    }
-                }
+              
             ]
-           
+
             });
             table.destroy();
         }
